trepan 0.5.3 2015-10-12

- Revise quit to handle threads

trepan 0.5.2 2015-08-24
- redo to correct wheel build

trepan 0.5.1 2015-08-15

- pytest support improvement: Add debug(level=...)
  The causes the debugger to skip recent frames used in setup.

trepan 0.5.0 2015-08-02

- Don't show an error if we can't import bpy or ipython - they are optional
- bug fixes

trepan 0.4.9 2015-06-12 Fleetwood

- add bpython shell.
- eval? of "for VAR in EXPR:" is "EXPR"
- set default completion (not debugger completion) in python shell
- Save/restore ipython completion if we can do so
- don't highlight prompt when highlight is plain/off
- add line completion on tbreak and break
- Add syntax help and go over docs, add links to readthedocs

trepan 0.4.8 2015-05-16

- Include instruction number in location
- whatis: more info via Python3 inspect
- align disassembly more with dis.dis.
- Add "info *" and "info arg1, arg2".
- Add "info frame *number*
- Set/check max args in subcommands
- Add completion on "tbreak", "break" and "set highlight"
- Don't highlight prompt when highlight is plain or off
- eval? picks out EXPR in for VAR in EXPR:
- Update online-help

trepan 0.4.7 2015-05-16

- Better command completion for on display numbers and identifiers
  (commands: enable, disable, info break, delete, debug, whatis, pydocx,
   pr, pp)
- "info break [nums..]" allows giving breakpoint numbers to narrow results
- add "info frame" to show current call-stack information,
- add "info signals * to show a list of signals
- fix misc bugs

trepan 0.4.6 2015-05-15

- Support for getting called from within ipython (--from_ipython)
  See also https://github.com/rocky/ipython-trepan/
- prompt is underlined if highlight is on
- Fix bug in string eval to file remapping
- Add boolean closed on I/O routines


trepan 0.4.5 2015-05-10
- Fix bug in "next" command
- Try to fix RST in pypi
- Rename package to trepan3 since source-code can't co-exist
- fix bux in searching help with regexp

