@@ -1,5 +1,6 @@
 (gcd.py:10): <module>
 -> 10 """
+
 Set basename is on.
 Set event is on.
 Set stopping is off.
@@ -8,6 +9,7 @@ line - gcd.py:10
 line - gcd.py:11
 (gcd.py:11): <module>
 -- 11 import sys
+
  11  ->	import sys
 Set stopping is on.
 line - gcd.py:13
@@ -15,10 +17,12 @@ line - gcd.py:26
 line - gcd.py:40
 (gcd.py:40): <module>
 -- 40 if __name__=='__main__':
+
  40  ->	if __name__=='__main__':
 Set stopping is off.
 line - gcd.py:41
 (gcd.py:41): <module>
 -- 41     check_args()
+
  41  ->	    check_args()
 trepan3k: That's all, folks...
